updating swagger docs
